# zfss

./: .gitignore  CLAUDE.md  README.md  package-lock.json  package.json  vite.config.ts
doc/: ZFSSYSTEM.md  zsSYSTEM.md
doc/system/: 00-overview.md  01-overview-philosophy.md  02-architecture.md  03-tech-stack.md  04-project-structure.md  05-config-env.md  09-database-schema.md  10-ecosystem-integration.md  10-product-surface.md  11-handover.md  50-operations.md  BUILD.sh  (+3 more)
docs/: authority_cutover.md  db_access_layer.md  final_doctrine_review.md  local_postgres_authority.md  local_reingest_plan.md  migration_verification.md  render_export_plan.md  zfss_architecture_spec.md  zfss_extended_roadmap.md
migrations/: 001_initial_schema.sql  002_append_only_enforcement.sql  003_signal_link_events.sql
scripts/: apply_schema.sh  check_verify_prereqs.sh  db_status.sh  export_render_snapshot.sh  import_snapshot_to_local.sh  verify_local_postgres.sh  verify_migration.py
src/: index.html  main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: constraints.rs  main.rs  state.rs
src-tauri/src/config/: mod.rs  settings.rs
src-tauri/src/db/: mod.rs  pool.rs
src-tauri/src/ipc/: artifact_cmds.rs  decision_cmds.rs  issue_cmds.rs  mod.rs  response_cmds.rs  signal_cmds.rs
src-tauri/src/lifecycle/: mod.rs
src-tauri/src/models/: artifact.rs  decision.rs  ids.rs  issue.rs  mod.rs  response.rs  signal.rs  user.rs
src-tauri/src/offline/: mod.rs
src-tauri/src/repository/: mod.rs
src-tauri/src/service/: mod.rs
src-tauri/src/util/: mod.rs  paths.rs
(+21 files in other folders)
