[package]
name = "zfss"
version = "1.0.0"
description = "Zen Feedback & Service System - Feedback metabolism for the Forge ecosystem"
authors = ["Forge Ecosystem"]
license = "MIT"
repository = ""
edition = "2024"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri
tauri = { version = "2", features = [] }
tauri-plugin-global-shortcut = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database (PostgreSQL via sqlx)
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "chrono", "uuid"] }

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }

# Identity and time
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde", "clock"] }

# Utilities
directories = "5"
anyhow = "1"
thiserror = "1"
regex = "1"
rand = "0.8"
dotenvy = "0.15"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
